<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreen"
    android:scrollbars="vertical">


    <ImageView
        android:id="@+id/ivCreateAcc"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/econic_logo_01"
        android:contentDescription="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginVertical="50dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCreateAcc"
        android:layout_centerHorizontal="true"
        android:hint="@string/AccountName"
        android:textColorHint="@color/offWhite"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="25dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio"

            android:textColor="@color/offWhite"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNombre"
        android:layout_centerHorizontal="true"
        android:hint="@string/AccountEmail"
        android:textColorHint="@color/offWhite"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio"

            android:textColor="@color/offWhite"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEmail"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtEmail"
        android:hint="@string/AccountPwd"
        android:textColorHint="@color/offWhite"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColor="@color/offWhite"
            android:inputType="textPassword"

            android:background="@drawable/radio"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPassword"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtPassword"

        android:hint="@string/ConfirmPwd"
        android:textColorHint="@color/offWhite"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/offWhite"
            android:inputType="textPassword"
            android:background="@drawable/radio"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/separator"
        android:layout_width="25dp"
        android:layout_height="5dp"
        android:layout_below="@id/txtPassword2"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/round_button"
        app:backgroundTint="@color/lightGreen"
        android:focusable="false"
        android:clickable="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPassword2"
        android:shadowRadius="0"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtPassword2"
        android:background="@drawable/round_button"
        android:textColor="@color/offWhite"
        android:text="@string/login"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="30dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
